<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="btn_back">뒤로</string>	
    <string name="btn_edit">편집</string>
    <string name="btn_favo">Favo</string>
    <string name="btn_add">추가</string>
    <string name="btn_category">분류</string>
    <string name="btn_category_select">분류선택</string>
    <string name="btn_save">저장</string>
    <string name="tag_edit_select">태그편집</string>
	<string name="input_amount_remove_all">전체지움</string>
	<string name="input_amount_remove">지움</string>
	<string name="input_assets_name">지출입력</string>
	<string name="input_assets_btn_name">자산</string>
	<string name="input_assets_tab_name">자산</string>
    <string name="input_assets_date_name">날짜</string>
    <string name="input_assets_category_name">분류</string>
    <string name="input_assets_amount_name">금액</string>
    <string name="input_assets_memo">메모</string>
    <string name="input_assets_title_name">제목</string>
    <string name="input_assets_btn_save">저장</string>
    <string name="input_deposit_title_name">제목</string>
    <string name="input_deposit_amount_name">금액</string>
    <string name="input_deposit_create_date_name">예금일</string>
    <string name="input_deposit_expiry_date_name">만기일</string>
    <string name="input_deposit_account">계좌</string>
    <string name="input_deposit_rate">이율</string>
    <string name="input_deposit_memo">메모</string>
    <string name="input_savings_title_name">제목</string>
    <string name="input_savings_amount_name">납입금액</string>
    <string name="input_savings_create_date_name">예금일</string>
    <string name="input_savings_expiry_date_name">만기일</string>
    <string name="input_savings_account">계좌</string>
    <string name="input_savings_rate">이율</string>
    <string name="input_savings_memo">메모</string>
    <string name="input_stock_title_name">종목</string>
    <string name="input_stock_date_name">날짜</string>
    <string name="input_stock_count_name">수량</string>
    <string name="input_stock_price_name">주당 가격</string>
    <string name="input_stock_store_name">판매처</string>
    <string name="input_stock_memo">메모</string>
    <string name="input_fund_title_name">상품명</string>
    <string name="input_fund_date_name">개설 날짜</string>
    <string name="input_fund_expiry_date_name">만기 날짜</string>
    <string name="input_fund_price_name">매입 가격</string>
    <string name="input_fund_kind_name">유형</string>
    <string name="input_fund_store_name">판매처</string>
    <string name="input_fund_repeat_name">반복</string>
    <string name="input_fund_memo">메모</string>
    <string name="input_insurance_title_name">제목</string>
    <string name="input_insurance_create_date_name">개설일</string>
    <string name="input_insurance_expiry_date_name">만기일</string>
    <string name="input_insurance_company_name">보험사</string>
    <string name="input_insurance_amount_name">납입금액</string>
    <string name="input_insurance_memo">메모</string>
    <string name="input_liability_name">지출입력</string>
    <string name="input_liability_btn_name">부채</string>
    <string name="input_liability_tab_name">부채</string>
    <string name="input_liability_date_name">날짜</string>
    <string name="input_liability_category_name">분류</string>
    <string name="input_liability_amount_name">금액</string>
    <string name="input_liability_memo">메모</string>
    <string name="input_liability_title_name">제목</string>
    <string name="input_liability_btn_save">저장</string>
    <string name="input_loan_date_name">날짜</string>
	<string name="input_loan_title_name">제목</string>
	<string name="input_loan_amount_name">대출 금액</string>
	<string name="input_loan_company_name">대출 기관</string>
	<string name="input_loan_memo">메모</string>
	<string name="input_cash_service_date_name">날짜</string>
	<string name="input_cash_service_title_name">제목</string>
	<string name="input_cash_service_amount_name">금액</string>
	<string name="input_cash_service_card_name">카드</string>
	<string name="input_cash_service_memo">메모</string>
	<string name="input_person_loan_date_name">날짜</string>
	<string name="input_person_loan_title_name">제목</string>
	<string name="input_person_loan_amount_name">금액</string>
	<string name="input_person_loan_person_name">빌려준 사람</string>
	<string name="input_person_loan_memo">메모</string>
    <string name="input_expense_name">지출입력</string>
	<string name="input_expense_btn_name">지출</string>
    <string name="input_expense_date_name">날짜</string>
    <string name="input_expense_category_name">분류</string>
    <string name="input_expense_amount_name">금액</string>
    <string name="input_expense_method_name">결제</string>
    <string name="input_expense_method_cash">현금</string>
    <string name="input_expense_method_card">카드</string>
    <string name="input_expense_method_account">계좌</string>
    <string name="input_expense_memo_name">메모</string>
    <string name="input_expense_tag_name">태그</string>
    <string name="input_expense_repeat_name">반복</string>
    <string name="input_expense_btn_save">저장</string>
    <string name="input_expense_selected_tag">태그를 선택해주세요</string>
    <string name="input_income_name">수입입력</string>
    <string name="input_income_btn_name">수입</string>
    <string name="input_income_date_name">날짜</string>
    <string name="input_income_category_name">분류</string>
    <string name="input_income_amount_name">금액</string>
    <string name="input_income_memo_name">메모</string>
    <string name="input_income_repeat_name">반복</string>
    <string name="input_income_btn_save">저장</string>
    <string name="input_income_method_name">수령</string>
    <string name="input_income_method_cash">현금</string>
    <string name="input_income_method_account">계좌</string>
    <string name="input_account_institution">금융기관</string>
    <string name="input_account_nubmer">계좌번호</string>
    <string name="input_account_balance">잔액</string>
    <string name="input_account_type">종류</string>
    <string name="input_account_create_date">신규일</string>
    <string name="input_account_expiry_date">만기일</string>
    <string name="input_account_memo">메모</string>
    <string name="input_account_title">이름</string>
    <string name="input_account_save">저장</string>
    <string name="input_select_category">분류를 선택해 주세요</string>
    <string name="input_warning_msg_not_category">분류가 선택되지 않았습니다.</string>
    <string name="input_warning_msg_not_amount">가격이 입력되지 않았습니다.</string>
    <string name="input_credit_card_title">카드등록</string>
    <string name="input_credit_card_compant">카드사</string>
    <string name="input_credit_card_name">이름</string>
    <string name="input_credit_card_number">번호</string>
    <string name="input_credit_card_account">결제계좌</string>
    <string name="input_credit_card_start_bill">청구시작일</string>
    <string name="input_credit_card_end_bill">청구종료일</string>
    <string name="input_credit_card_bill_period">청구기간</string>
    <string name="input_credit_card_bill_period_one_month">부터한달</string>
    <string name="input_credit_card_settlement_day">결제일</string>
    <string name="input_credit_card_memo">메모</string>
    <string name="input_credit_card_save">저장</string>
    <string name="input_check_card_title">카드등록</string>
    <string name="input_check_card_compant">카드사</string>
    <string name="input_check_card_name">이름</string>
    <string name="input_check_card_number">번호</string>
    <string name="input_check_card_account">결제계좌</string>
    <string name="input_check_card_memo">메모</string>
    <string name="input_check_card_save">저장</string>
    <string name="input_prepaid_card_title">카드등록</string>
    <string name="input_prepaid_card_compant">카드사</string>
    <string name="input_prepaid_card_name">이름</string>
    <string name="input_prepaid_card_number">번호</string>
    <string name="input_prepaid_card_account">결제계좌</string>
    <string name="input_prepaid_card_memo">메모</string>
    <string name="input_prepaid_card_save">저장</string>
    <string name="input_prepaid_card_balance">잔액</string>
    <string name="input_bookmark_name">즐겨찾기 추가/편집</string>
    <string name="main_memu_home">홈</string>
    <string name="main_memu_assets_liability">자산</string>
    <string name="main_memu_report">목록 </string>
    <string name="main_memu_card">카드</string>
    <string name="main_memu_account">계좌</string>
    <string name="main_memu_budget">예산</string>
    <string name="main_memu_purpose">목표</string>
    <string name="main_memu_search">검색</string>
    <string name="main_memu_setting">설정</string>
    <string name="app_name">FmFinance</string>
</resources>
