<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
  
  <LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginTop="30dp">
		<TextView android:layout_height="wrap_content" android:gravity="center" android:textSize="18dp" android:text="@string/input_credit_card_compant" android:layout_width="80dp" android:id="@+id/TVCreditCardCompany">
		</TextView>
		<Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:numeric="integer" android:id="@+id/BtnCreadCardComapy">
		</Button>
	</LinearLayout>
	<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent">
		<TextView android:layout_height="wrap_content" android:textSize="18dp" android:gravity="center" android:text="@string/input_credit_card_name" android:id="@+id/TVCrediCardName" android:layout_width="80dp">
		</TextView>
		<EditText android:layout_height="wrap_content" android:textSize="18dp" android:layout_width="fill_parent" android:id="@+id/ETCrediCardName">
		</EditText>
	</LinearLayout>
	<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent">
		<TextView android:layout_height="wrap_content" android:gravity="center" android:textSize="18dp" android:text="@string/input_credit_card_number" android:id="@+id/TVCrediCardNumber" android:layout_width="80dp">
		</TextView>
		<EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/ETCrediCardNumber" android:singleLine="true" android:numeric="integer">
		</EditText>
	</LinearLayout>
	<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent">
		<TextView android:layout_height="wrap_content" android:gravity="center" android:textSize="18dp" android:text="@string/input_credit_card_account" android:layout_width="80dp" android:id="@+id/TVCreditCardAccount">
		</TextView>
		<Button android:id="@+id/BtnCreditCardAccount" android:layout_height="wrap_content" android:layout_width="fill_parent">
		</Button>
	</LinearLayout>
	<Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginTop="20dp" android:id="@+id/BtnAccountSave" android:text="@string/input_account_save">
	</Button>
  
  
</LinearLayout>
