<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

	<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1" android:orientation="vertical">
		<LinearLayout android:id="@+id/LinearLayout02" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="10" android:layout_marginTop="5dp">
		<ProgressBar android:layout_width="fill_parent" android:id="@+id/IncomeExpensePrograss" style="?android:attr/progressBarStyleHorizontal" android:layout_height="fill_parent" android:max="100" android:layout_weight="2"></ProgressBar>
		<TextView android:id="@+id/TVIncomeExpenseAmount" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="4" android:textSize="17sp" android:gravity="right|center_vertical"></TextView>
	</LinearLayout>
		<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:id="@+id/TodayLayout" android:orientation="vertical" android:layout_weight="7" android:layout_marginTop="5dp">
			<LinearLayout android:id="@+id/LinearLayout05" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="2">
			<Button android:layout_width="wrap_content" android:id="@+id/BtnPreviousDay" android:maxHeight="30dp" android:minHeight="30dp" android:layout_height="fill_parent" android:text="이전날"></Button>
			<TextView android:layout_height="wrap_content" android:paddingTop="5dp" android:layout_marginLeft="5dp" android:textSize="17sp" android:id="@+id/TVCurrentday" android:layout_width="wrap_content" android:maxHeight="30dp" android:text="이전달"></TextView>
			<Button android:layout_width="wrap_content" android:id="@+id/BtnNextDay" android:minHeight="30dp" android:maxHeight="30dp" android:layout_height="fill_parent" android:text="다음날"></Button>
	</LinearLayout>
			<Button android:layout_height="wrap_content" android:id="@+id/BtnTodayIncome" android:layout_width="fill_parent" android:gravity="left|center" android:layout_weight="1"></Button>
			<Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/BtnTodayExpense" android:gravity="left|center" android:layout_weight="1"></Button>
		
</LinearLayout>
	
		<LinearLayout android:id="@+id/LinearLayout02" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="8">
		</LinearLayout>
		<LinearLayout android:id="@+id/LinearLayout03" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="8">
			<Button android:layout_weight="1" android:layout_height="fill_parent" android:layout_width="fill_parent" android:id="@+id/BtnInputIncome" android:text="@string/input_income_btn_name" android:textSize="50sp" android:gravity="center"></Button>
			<Button android:layout_weight="1" android:layout_height="fill_parent" android:id="@+id/BtnInputExpense" android:text="@string/input_expense_btn_name" android:layout_width="fill_parent" android:textSize="50sp" android:gravity="center"></Button>
		</LinearLayout>
		<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:id="@+id/TotalLayout" android:layout_weight="10">
			<TextView android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="fill_parent" android:id="@+id/TVTotalIncome" android:textSize="20sp" android:gravity="top|center_horizontal"></TextView>
			<TextView android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="fill_parent" android:id="@+id/TVTotalExpense" android:textSize="20sp" android:gravity="top|center_horizontal"></TextView>
		</LinearLayout>
		
	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="7" android:id="@+id/MainMenuLayout">
		<HorizontalScrollView android:id="@+id/HorizontalScrollView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="7">
			<LinearLayout android:id="@+id/LinearLayout04" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scrollbarStyle="outsideOverlay">
				<Button android:layout_width="wrap_content" android:id="@+id/BtnAssetsLiability" android:text="@string/main_memu_assets_liability" android:layout_height="fill_parent" android:minWidth="50dp" android:minHeight="50dp"></Button>
				<Button android:layout_width="wrap_content" android:id="@+id/BtnReport" android:text="@string/main_memu_report" android:layout_height="fill_parent" android:minWidth="50dp" android:minHeight="50dp"></Button>
				<Button android:layout_width="wrap_content" android:id="@+id/BtnCard" android:text="@string/main_memu_card" android:layout_height="fill_parent" android:minWidth="50dp" android:minHeight="50dp"></Button>
				<Button android:layout_width="wrap_content" android:id="@+id/BtnAccount" android:text="@string/main_memu_account" android:layout_height="fill_parent" android:minWidth="50dp" android:minHeight="50dp"></Button>
				<Button android:layout_width="wrap_content" android:id="@+id/BtnBudget" android:text="@string/main_memu_budget" android:layout_height="fill_parent" android:minWidth="50dp" android:minHeight="50dp"></Button>
				<Button android:layout_width="wrap_content" android:id="@+id/BtnPurpose" android:text="@string/main_memu_purpose" android:layout_height="fill_parent" android:minWidth="50dp" android:minHeight="50dp"></Button>
				<Button android:layout_width="wrap_content" android:id="@+id/BtnSearch" android:text="@string/main_memu_search" android:layout_height="fill_parent" android:minWidth="50dp" android:minHeight="50dp"></Button>
				<Button android:layout_width="wrap_content" android:id="@+id/BtnSetting" android:text="@string/main_memu_setting" android:layout_height="fill_parent" android:minWidth="50dp" android:minHeight="50dp"></Button>
			</LinearLayout>
		</HorizontalScrollView>
	</LinearLayout>


</LinearLayout>
