<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical" android:layout_height="fill_parent" android:layout_width="fill_parent">

	
		
	<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginTop="20pt">
		<TextView android:layout_width="35pt" android:layout_height="wrap_content" android:textSize="7pt" android:padding="2pt" android:gravity="center" android:text="@string/input_liability_title_name" android:id="@+id/TVLiabilityTitle">
		</TextView>
		<EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/ETLiabilityTitle">
		</EditText>
	</LinearLayout><LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent">
		<TextView android:layout_width="35pt" android:id="@+id/TVLiabilityDate" android:text="@string/input_liability_date_name" android:layout_height="wrap_content" android:textSize="7pt" android:padding="2pt" android:gravity="center">
		</TextView>
		<Button android:layout_height="wrap_content" android:id="@+id/BtnLiabilityDate" android:textSize="7pt" android:layout_width="fill_parent">
		</Button>
	</LinearLayout>
	<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent">
		<TextView android:layout_width="35pt" android:id="@+id/TVLiabilityCategory" android:layout_height="wrap_content" android:textSize="7pt" android:padding="2pt" android:gravity="center" android:text="@string/input_liability_category_name">
		</TextView>
		<Button android:id="@+id/BtnLiabilityCategory" android:layout_height="wrap_content" android:layout_width="fill_parent">
		</Button>
	</LinearLayout>
	<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent">
		<TextView android:layout_width="35pt" android:id="@+id/TVLiabilityAmount" android:layout_height="wrap_content" android:textSize="7pt" android:padding="2pt" android:gravity="center" android:text="@string/input_liability_amount_name">
		</TextView>
		<Button android:id="@+id/BtnLiabilityAmount" android:layout_height="wrap_content" android:layout_width="fill_parent">
		</Button>
	</LinearLayout>
	
	<Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/BtnLiabilitySave" android:text="@string/input_liability_btn_save" android:layout_marginTop="10pt">
	</Button>
	









</LinearLayout>
