<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/inputAssetsStock"
  android:orientation="vertical" android:layout_height="fill_parent" android:layout_width="fill_parent">

	<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginTop="30dp">
		<TextView android:text="@string/input_stock_title_name" android:layout_height="wrap_content" android:gravity="center" android:textSize="18sp" android:layout_width="70dp" android:id="@+id/TVStockTitle">
		</TextView>
		<EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/ETStockTitle">
		</EditText>
	</LinearLayout>
	<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginTop="10dp">
		<TextView android:id="@+id/TVStocktDate" android:text="@string/input_stock_date_name" android:layout_height="wrap_content" android:textSize="18sp" android:gravity="center" android:layout_width="70dp">
		</TextView>
		<Button android:layout_height="wrap_content" android:id="@+id/BtnStocktDate" android:layout_width="fill_parent">
		</Button>
	</LinearLayout>
	<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginTop="10dp">
		<TextView android:text="@string/input_stock_count_name" android:layout_height="wrap_content" android:gravity="center" android:textSize="18sp" android:layout_width="70dp" android:id="@+id/TVStockCount">
		</TextView>
		<EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/ETStockCount" android:numeric="integer">
		</EditText>
	</LinearLayout>
	<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginTop="10dp">
		<TextView android:text="@string/input_stock_price_name" android:layout_height="wrap_content" android:gravity="center" android:textSize="18sp" android:layout_width="70dp" android:id="@+id/TVStockPrice">
		</TextView>
		<Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/BtnStockPrice">
		</Button>
	</LinearLayout>
	<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginTop="10dp">
		<TextView android:id="@+id/TVStockStore" android:text="@string/input_stock_store_name" android:layout_height="wrap_content" android:textSize="18sp" android:gravity="center" android:layout_width="70dp">
		</TextView>
		<EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/ETStockStore">
		</EditText>
	</LinearLayout>
	<LinearLayout android:id="@+id/LinearLayout01" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginTop="10dp">
		<TextView android:id="@+id/TVStockMemo" android:text="@string/input_stock_memo" android:layout_height="wrap_content" android:gravity="center" android:textSize="18sp" android:layout_width="70dp">
		</TextView>
		<EditText android:id="@+id/ETStockMemo" android:layout_height="wrap_content" android:layout_width="fill_parent">
		</EditText>
	</LinearLayout>
</LinearLayout>
